# lido-trustless-tvl-oracle-solution

./: .gitignore  .gitmodules  README.md  brownie-config.yml  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  pyproject.toml
codegen/: CircuitParams.sol  codegen_circuit_params.py
contracts/: BeaconBlockHashKeeper.sol  BeaconBlockHashKeeperOracle.sol  CircuitParams.sol  TVLOracleContract.sol  ZKLLVMVerifierAdapter.sol  ZKTVLOracleContract.sol  gate0.sol  gate4.sol  gate_argument.sol  verifier.sol
contracts/gates/: circuit_params.json  gate0.sol  gate13.sol  gate5.sol  gate_argument.sol  linked_libs_list.json
contracts/gates/gates/: gate0.sol  gate4.sol  gate6.sol  gate_argument.sol
contracts/mocks/: LidoLocatorMock.sol  LidoStakingRouterMock.sol  ZKLLVMVerifierMock.sol
contracts/test_helpers/: BeaconBlockHashKeeperOracleTimeTravellable.sol
deploy/: 00-gates.ts  01-blockHashKeeper.ts  02-zktvlcontract.ts
interfaces/: IBeaconBlockHashProvider.sol  IBeaconBlockHashReceiver.sol  ILidoLocator.sol  ILidoStakingRouter.sol  IVerifier.sol
scripts/: check_verification.py  circuit_params.json  deploy.ts  e2e_with_real_cl.py  end_to_end.py  eth_consensus_layer_ssz.py  eth_node_api_stub_server.py  eth_ssz_utils.py  extract-abi.js  run_env.py  run_gen_bs_report.py  run_gen_report.py  run_local_env.ts  server_test.py  start_utils.py
scripts/components/: block_hash_provider.py  concensus_client.py  eth_consensus_layer_ssz.py  eth_node_api_stub_server.py  eth_ssz_utils.py  oracle.py  oracle_invoker.py  utils.py
test/lido/0.8.9/oracle/: hash-consensus-deploy.test.js
test/lido/helpers/: utils.js
test/oracle/: beacon-block-hash-keeper-oracle-deploy.test.js
tests/: conftest.py  test_block_hash_keeper.py
utils/: beacon_state_downloader.py  load.sh
